# cdr.today

./: Cargo.toml  LICENSE  README.md
.github/workflows/: api.yml  clippy.yml  rust.yml
cli/: Cargo.toml
cli/src/: derive.rs  err.rs  lib.rs
cli/src/cmd/: run.rs
core/: Cargo.toml
core/src/: actix.rs  cli.rs  config.rs  graphql.rs  orm.rs  result.rs  share.rs
crates/model/: Cargo.toml  README.md
crates/model/src/: account.rs  avatar.rs  community.rs  lib.rs  member.rs  post.rs
crates/primitive/: Cargo.toml
crates/primitive/src/: hash.rs  key.rs  lib.rs
model/: Cargo.toml
model/src/: avatar.rs  community.rs  lib.rs  member.rs  post.rs
poc/: Cargo.toml
poc/src/: actix.rs  cli.rs  config.rs  graphql.rs  lib.rs  orm.rs  result.rs  share.rs
poc/src/cmd/: mod.rs
poc/src/net/: mod.rs
poc/src/orm/: mod.rs  sql.rs
poc/src/schema/: .#mod.rs  account.rs  mod.rs
poc/src/scheme/: mod.rs
primitive/: Cargo.toml  README.md
primitive/src/: key.rs  lib.rs  storage.rs
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs
service/: Cargo.toml  README.md
service/src/: auth.rs  lib.rs
src/: app.rs  cli.rs  config.rs  lib.rs  orm.rs  result.rs  share.rs
src/api/: graphql.rs  mod.rs
src/cmd/: mod.rs  run.rs
src/config/: conn.rs  http.rs  mod.rs
src/crypto/: address.rs  mod.rs
src/db/: mod.rs  pg.rs  redis.rs
src/graphql/: mod.rs
src/middleware/: auth.rs  mod.rs  util.rs
src/middleware/auth/: address.rs  call.rs  error.rs  header.rs  mod.rs  token.rs  util.rs  uuid.rs
src/primitive/: mod.rs
src/result/: err.rs  mod.rs
src/schema/: account.rs  mod.rs
src/service/: graphql.rs
