[package]
name = "cdr-today"
version = "0.0.1"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"
description = "The server of cdr.today"
repository = "https://github.com/cdr-today/st"
license = "MIT"
documentation = "https://docs.rs/st"
homepage = "https://github.com/cdr-today/st"
include = ["src/**/*", "Cargo.toml", "./README.md"]
keywords = ["service"]
readme = './README.md'


[[bin]]
name = "ct"
path = "src/bin/ct.rs"

[dependencies]
actix-cors = "^0"
actix-web = "^3"
actix-service = "^1"
env_logger = "^0"
futures = "^0"
structopt = "^0"

juniper = { git = "https://github.com/graphql-rust/juniper.git", features = ["expose-test-schema"] }
juniper-actix = { package = "juniper_actix", git = "https://github.com/graphql-rust/juniper.git" }