[package]
name = "poc"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

[dependencies]
# network
juniper = "0.15.2"
juniper_actix = "0.2.2"
actix-web = "3.3.2"
futures = "0.3.12"

# database
redis = "0.19.0"
diesel = { version = "1.4.5", features = [ "postgres", "r2d2" ] }

# crypto
uuid = { version = "0.8.2", features = ["v4"]}
openssl = "0.10.32"

# actix family
actix-cors = "0.5.4"
actix-web-httpauth = "0.5.0"
actix-service = "1.0.6"

# dev
log = "0.4.0"
thiserror = "1.0.23"
derive_more = "0.99.11"

# data
toml = "0.5.8"
serde = { version = "1.0.120", features = ["derive"] }

# cli
etc = "0.1.16"
structopt = "0.3.21"

# debug
env_logger = "0.8.2"
