[package]
name = "cli"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name = "ct"
# path = "src/bin/ct.rs"

[dependencies]
# actix-web = "3"
# actix-service = "1.0.6"
# env_logger = "0.7.1"
# futures = "0.3.5"
# structopt = "0.3.17"