[package]
name = "runtime"
version = "0.1.0"
authors = ["clearloop <udtrokia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ct-service = { path = "../service" }
ct-model = { path = "../model" }
ct-primitive = { path = "../primitive" }
